--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -46,7 +46,7 @@
                     if(ExamineManager.Instance.TryGetIndex("ExternalIndex", out var index))
                     {
                         var searcher = index.GetSearcher();
-                        var results = searcher.CreateQuery("content").NodeTypeAlias("blockListDocumentType").And().Field("Lang", searchTerm).Execute();
+                        var results = searcher.CreateQuery("content").NodeTypeAlias("blockListDocumentType").And().Field("*", searchTerm).Execute();
                         if (results.Any())
                         {
                             <ul>
