--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -5,6 +5,8 @@
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
     var content = (ContentModels.Block4)Model.Content;
+    var searchQuery = Request.QueryString["search"];
+
 
 }
 
