--- a/App_Plugins/Deploy/views/components/workspace/udworkspaceinfo/udworkspaceinfo.html
+++ b/App_Plugins/Deploy/views/components/workspace/udworkspaceinfo/udworkspaceinfo.html
@@ -17,7 +17,7 @@
         </ul>
     </div>
 
-    <div class="span6">
+    <div class="span6" ng-if="allowManageWorkspaces">
         <h4 class="bold">Manage Workspace</h4>
         <p>Manage workspace settings on umbraco.io, there you can invite team members, assign hostnames, adjust security and</p>
         <ul class="unstyled">
