--- a/Views/home.cshtml
+++ b/Views/home.cshtml
@@ -20,6 +20,7 @@
 
 <section class="section section">
     @Html.Partial("~/views/partials/navigation/_MainCarousel.cshtml")
+    @Html.GetGridHtml(Model.Content, "MyGridLayout")
     @Html.GetGridHtml(Model, "bodyText", "bootstrap3-fluid")
 </section>
 
