Adding template 'Home'

--- a/Views/home.cshtml
+++ b/Views/home.cshtml
@@ -22,6 +22,7 @@
     @Html.Partial("~/views/partials/navigation/_MainCarousel.cshtml")
     @Html.GetGridHtml(Model, "MyGridLayout")
     @Html.GetGridHtml(Model, "bodyText", "bootstrap3-fluid")
+    @Html.GetGridHtml(Model, "bodyText", "bootstrap3-fluid")
 </section>
 
 
